<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="@dimen/main_list_space">

        <TextView
            android:id="@+id/tv_billboard"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/main_function_normal"
            android:gravity="center"
            android:text="@string/main_billboard" />

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginLeft="@dimen/main_list_space"
            android:layout_weight="1"
            android:background="@drawable/main_function_normal"
            android:gravity="center"
            android:text="@string/main_history_record" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/main_list_space">

        <TextView
            android:id="@+id/tv_gamer_list"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/main_function_normal"
            android:gravity="center"
            android:text="@string/main_gamer_list" />

        <TextView
            android:id="@+id/tv_role_list"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginLeft="@dimen/main_list_space"
            android:layout_weight="1"
            android:background="@drawable/main_function_normal"
            android:gravity="center"
            android:text="@string/main_role_list" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_create_game"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/main_function_normal"
        android:gravity="center"
        android:text="@string/main_create_game" />

</LinearLayout>
