<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/role_name" />

        <EditText
            android:id="@+id/et_gamer_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:gravity="left|center_vertical"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="30dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/role_rules" />

        <EditText
            android:id="@+id/et_gamer_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:gravity="left|center_vertical"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/role_score" />

        <EditText
            android:id="@+id/et_role_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:gravity="left|center_vertical"
            android:inputType="number"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="30dp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_camp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_normal_camp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/civilian_camp" />

        <RadioButton
            android:id="@+id/rb_god_camp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/god_camp" />

        <RadioButton
            android:id="@+id/rb_wolf_camp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/wolf_camp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_add_gamer"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/main_function_normal"
        android:gravity="center"
        android:text="@string/string_add" />
</LinearLayout>